--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
       - name: Build Docker Image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/week3-app:${{ github.sha }} .
+        run: docker build -t "${{ secrets.DOCKER_USERNAME }}/week3-app:${{ github.sha }}" .
 
       - name: Push Docker Image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/week3-app:${{ github.sha }}
+        run: docker push "${{ secrets.DOCKER_USERNAME }}/week3-app:${{ github.sha }}"
