--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,4 +31,4 @@ jobs:
         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/week3-app:${{ github.sha }} .
 
       - name: Push Docker Image
-        run: docker push"${{ secrets.DOCKER_USERNAME }}/week3-app:${{ github.sha }}
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/week3-app:${{ github.sha }}
