--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,11 @@ jobs:
         run: |
           echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Build Docker Image
-        run: docker build -f ./Dockerfile -t ${{ secrets.DOCKER_USERNAME }}/week3-app:${{ github.sha }} .
+        run: docker buildx build -f ./Dockerfile -t ${{ secrets.DOCKER_USERNAME }}/week3-app:${{ github.sha }} --load .
 
       - name: Push Docker Image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/week3-app:${{ github.sha }}
