--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,13 @@
 name: Simple CI
 
-on: [push]
+on:
+  push:
+    branches: [ "main" ]
 
 jobs:
   test-app:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -15,17 +18,27 @@ jobs:
           python-version: "3.10"
 
       - name: Install Dependencies
-        run: pip install pytest
+        run: |
+          pip install --upgrade pip
+          pip install pytest
+          # pip install -r requirements.txt  
 
       - name: Run Tests
         run: pytest
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Login to Docker Hub
         run: |
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login \
+            -u "${{ secrets.DOCKER_USERNAME }}" \
+            --password-stdin
 
       - name: Build Docker Image
-        run: docker build -f ./Dockerfile -t ${{ secrets.DOCKER_USERNAME }}/week3-app:${{ github.sha }} .
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/week3-app:${{ github.sha }} .
 
       - name: Push Docker Image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/week3-app:${{ github.sha }}
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/week3-app:${{ github.sha }}
