--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/week3-app:${{ github.sha }} .
+          docker build -t new-image .
 
       - name: Push Docker Image
         run: |
