--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,5 @@ jobs:
       - name: Build Docker Image
         run: |
           docker build -t new-image .
+          docker push new-image:latest
 
-      - name: Push Docker Image
-        run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/week3-app:${{ github.sha }}
