--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t new-image .
-          docker push new-image:latest
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/week3-app:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/week3-app:latest
+
 
