--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,8 +36,10 @@ jobs:
             --password-stdin
 
       - name: Build Docker Image
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/week3-app:latest .
-          docker push ${{ secrets.DOCKER_USERNAME }}/week3-app:latest
+        run:  docker build -t mhd/week3:${{ github.sha }} .
+
+
+      - name: Push Image
+        run: docker push mhd/week3:${{ github.sha }}
 
 
