--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: mr-smithers-excellent/docker-build-push@v6
         name: Build & push Docker image
         with:
-          image: repo/image
+          image: ${{ secrets.DOCKER_USERNAME }}/week3-app:${{ github.sha }}
           tags: v1, latest
           registry: registry-url.io
           dockerfile: Dockerfile.ci
