--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
             --password-stdin
 
       - name: Build Docker Image
-        run:  docker build -t mhd/week3:${{ github.sha }} .
+        run:  docker build -t ${{ secrets.DOCKER_USERNAME }}/week3:${{ github.sha }} .
 
 
       - name: Push Image
